[tool.poetry]
name = "airbnb-pyreact"
version = "0.1.0"
description = ""
authors = ["SamBeak <whdmsspt@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
