[tool.poetry]
name = "airbnb-pyreact"
version = "0.1.0"
description = ""
authors = ["SamBeak <114740158+SamBeak@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.221.1"}
strawberry-graphql-django = "^0.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
